# Robosoft_test

./: .flake8  .gitignore  .gitmodules  README.md  main.py  main2.py  main3.py  main_continuum_snake.py  main_control_rod_train.py  main_controllable_grab.py  main_controllable_grab_test.py  main_crack_mesh.py  main_grab_ball.py  main_grab_everything.py  main_navigation_snake.py  main_push_ball.py  new_forces.py  pov2blend.py  pyelastica.patch  pyproject.toml  requirements.txt  setup.py  vis_test.py
assets/: gen.py  show.py
rl_models/train_[-0.3, 0.3, -0.3, 0.3, 0.4, 0.5]/: data.pkl  params.pkl
rl_models/train_[-0.6, 0.6, -0.6, 0.6, 0.0, 0.3]_dampen5/: data_step_10000000.pth  params_step_10000000.pth
scene_assets/robot/: gen_cone.py
scripts/baseline_model/: main.py
scripts/navigation/: configs.py  data_gen.sh  main_data_export.py  main_data_gen_eval.py  main_data_gen_full.py  main_data_gen_meshes.py  main_data_gen_obstacle.py  main_data_gen_obstacle_gen.py  main_data_gen_prune.py  main_data_gen_random_go.py  main_data_gen_release.py  main_data_gen_target.py  main_data_gen_target_gen.py  main_data_gen_visual.py  main_data_gen_visual_gen.py  main_simulate_demo.py  templates.py  test_blend.py
scripts/rod_control/: configs.py  data_gen.sh  demo.py  main_data_gen_full.py  main_data_gen_meshes.py  main_data_gen_obstacle.py  main_data_gen_obstacle_gen.py  main_data_gen_random_go.py  main_data_gen_random_grab.py  main_data_gen_re_go.py  main_data_gen_traget.py  main_data_gen_visual.py  main_simulate_demo.py  main_simulate_visual_gen.py
ssim/: arguments.py  utils.py
ssim/components/: __init__.py  callback.py  constrain.py  contact.py  damper.py  force.py
ssim/components/rigid/: __init__.py  (+1 more)
ssim/configs/: continuum_snake.yaml  controllable_rod_objects.yaml  navigation_snake.yaml  push_ball.yaml  random_go.yaml  rod_grab.yaml  rod_mesh.yaml  rod_objects.yaml  rod_objects_test.yaml  rod_target.yaml  rod_target_train.yaml
ssim/envs/: __init__.py  base_envs.py  continuum_snake.py  controllable_grab_env.py  grab_ball_env.py  grab_env.py  grab_mesh_env.py  navigation_snake.py  push_ball_env.py  rod_target_control_env.py
ssim/visualize/: pov2blend.py  renderer.py  visualizer.py
test_result/: watch_3d_res.html
tests/: 0_push_ball.py  1_crack_mesh.py  2_grab_ball.py  3_navigation_snake.py  main_control_rod_test.py  main_controllable_grab.py  main_controllable_grab_test.py  main_grab_ball.py  main_grab_everything.py  main_grab_everything_test.py  main_navigation_snake.py
videos/: .py
work_dir/train_[-0.3, 0.3, -0.3, 0.3, 0.4, 0.5]_dampen10/: monitor.csv
work_dir/train_[-0.3, 0.3, -0.3, 0.3, 0.4, 0.5]_dampen15/: monitor.csv
(+19 files in other folders)
